syntax = "proto3";

package org.bigbluebutton.protos;

message MeetingData {
  // The ID, either internal or external, of the desired meeting.
  string meeting_id = 1;
}